--- a/main.css
+++ b/main.css
@@ -1,114 +1,114 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,900);
 
 .Navbar ul {
-    list-style: none;
-    padding-left: 0;
-    margin: 0
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
 }
 
 html {
-    font-size: 62.5%;
-    box-sizing: border-box
+  font-size: 62.5%;
+  box-sizing: border-box;
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: inherit
+  box-sizing: inherit;
 }
 
 body {
-    margin: 0;
-    background-color: #fff
+  margin: 0;
+  background-color: #fff;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 50%
+  max-width: 100%;
+  height: auto;
+  border-radius: 50%;
 }
 
 .u-cf:before,
 .u-cf:after {
-    content: " ";
-    display: table
+  content: " ";
+  display: table;
 }
 
 .u-cf:after {
-    clear: both
+  clear: both;
 }
 
 .u-hug {
-    margin-top: 0 !important
+  margin-top: 0 !important;
 }
 
 .u-pullRight {
-    float: right
+  float: right;
 }
 
 .u-keyline {
-    position: relative
+  position: relative;
 }
 
 .u-keyline:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    border-top: 1px solid #ddd
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  border-top: 1px solid #ddd;
 }
 
 .u-link {
-    text-decoration: none;
-    position: relative;
-    display: inline-block
+  text-decoration: none;
+  position: relative;
+  display: inline-block;
 }
 
 .u-link:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    bottom: .2em;
-    width: 100%;
-    height: 2px;
-    background-color: #256D85
+  content: "";
+  position: absolute;
+  z-index: -1;
+  bottom: 0.1em;
+  width: 100%;
+  height: 2px;
+  background-color: #256d85;
 }
 
 .u-link:hover:before {
-    background-color: #8FE3CF
+  background-color: #8fe3cf;
 }
 
 .u-shadow {
-    text-shadow: 4px 4px 0 #256D85;
-    transition: text-shadow .2s ease-in-out
+  text-shadow: 4px 4px 0 #256d85;
+  transition: text-shadow 0.2s ease-in-out;
 }
 
 a:hover .u-shadow {
-    text-shadow: -4px -4px 0 #8FE3CF
+  text-shadow: -4px -4px 0 #8fe3cf;
 }
 
-@media (max-width:767px) {
-    .u-hidden\@sm-down {
-        display: none !important
-    }
+@media (max-width: 767px) {
+  .u-hidden\@sm-down {
+    display: none !important;
+  }
 }
 
-@media (max-width:543px) {
-    .u-hidden\@xs-down {
-        display: none !important
-    }
+@media (max-width: 543px) {
+  .u-hidden\@xs-down {
+    display: none !important;
+  }
 }
 
 body {
-    color: #333;
-    font-size: 1.6rem;
-    font-family: Lato, Helvetica, Arial, sans-serif;
-    font-weight: normal;
-    line-height: 1.5;
-    letter-spacing: .008em;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
+  color: #333;
+  font-size: 1.6rem;
+  font-family: Lato, Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  line-height: 1.5;
+  letter-spacing: 0.008em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 h1,
@@ -117,9 +117,9 @@ h3,
 h4,
 h5,
 h6 {
-    color: #111;
-    line-height: 1.2;
-    font-weight: 900
+  color: #111;
+  line-height: 1.2;
+  font-weight: 900;
 }
 
 h1,
@@ -130,386 +130,386 @@ h5,
 h6,
 ul,
 p {
-    margin-top: 1.6rem;
-    margin-bottom: 0
+  margin-top: 1.6rem;
+  margin-bottom: 0;
 }
 
 h3,
 .h3 {
-    font-size: 2rem;
-    margin-top: 3.2rem
+  font-size: 2rem;
+  margin-top: 3.2rem;
 }
 
 a {
-    color: #333
+  color: #333;
 }
 
 ul {
-    padding-left: 1.8rem
+  padding-left: 1.8rem;
 }
 
 .Title {
-    font-size: 50px;
-    font-size: 10vw;
-    font-family: Lato, 'Open Sans', Helvetica, Arial;
-    font-weight: 900;
-    line-height: 1.1;
-    margin-top: 0;
-    margin-bottom: 0;
-    text-transform: uppercase;
-    display: inline-block
+  font-size: 50px;
+  font-size: 10vw;
+  font-family: Lato, "Open Sans", Helvetica, Arial;
+  font-weight: 900;
+  line-height: 1.1;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-transform: uppercase;
+  display: inline-block;
 }
 
-@media (max-width:525px) {
-    .Title {
-        font-size: 42px
-    }
+@media (max-width: 525px) {
+  .Title {
+    font-size: 42px;
+  }
 }
 
-@media (min-width:937.5px) {
-    .Title {
-        font-size: 95px
-    }
+@media (min-width: 937.5px) {
+  .Title {
+    font-size: 95px;
+  }
 }
 
 .Title-sub {
-    font-size: .34em;
-    letter-spacing: .16em;
-    font-weight: 400;
-    text-transform: none;
-    display: block;
-    margin-top: 1.2rem;
-    padding-top: 1.6rem;
-    border-top: .45em solid
+  font-size: 0.34em;
+  letter-spacing: 0.16em;
+  font-weight: 400;
+  text-transform: none;
+  display: block;
+  margin-top: 1.2rem;
+  padding-top: 1.6rem;
+  border-top: 0.45em solid;
 }
 
 .l-Wrapper {
-    width: 80%;
-    max-width: 90rem;
-    margin-left: auto;
-    margin-right: auto
+  width: 80%;
+  max-width: 90rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media (max-width:767px) {
-    .l-Wrapper--reset\@sm-down {
-        width: 100%
-    }
+@media (max-width: 767px) {
+  .l-Wrapper--reset\@sm-down {
+    width: 100%;
+  }
 }
 
 .l-Header {
-    margin-top: 6.4rem;
-    margin-bottom: 3.2rem
+  margin-top: 6.4rem;
+  margin-bottom: 3.2rem;
 }
 
 .l-Header-col {
-    margin-top: 3.2rem;
-    margin-bottom: 3.2rem;
+  margin-top: 3.2rem;
+  margin-bottom: 3.2rem;
 }
 
 .l-Header-img {
-    width: 200px;
-    height: 200px;
-    margin-bottom: 1.2rem
+  width: 200px;
+  height: 200px;
+  margin-bottom: 1.2rem;
 }
 
-@media (min-width:544px) {
-    .l-Header {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end
-    }
+@media (min-width: 544px) {
+  .l-Header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
 
-    .l-Header-col:last-child:not(:first-child) {
-        text-align: right;
-        margin-left: 3.2rem
-    }
+  .l-Header-col:last-child:not(:first-child) {
+    text-align: right;
+    margin-left: 3.2rem;
+  }
 
-    .l-Header-img {
-        margin-right: 0;
-        margin-left: auto;
-    }
+  .l-Header-img {
+    margin-right: 0;
+    margin-left: auto;
+  }
 }
 
 .l-Section {
-    margin-top: 6.4rem
+  margin-top: 6.4rem;
 }
 
 .l-Section:last-child {
-    margin-bottom: 6.4rem
+  margin-bottom: 6.4rem;
 }
 
 .l-Section + .l-Section {
-    position: relative;
-    border-top: 1px solid #ddd
+  position: relative;
+  border-top: 1px solid #ddd;
 }
 
 .l-Section + .l-Section:before {
-    content: "";
-    font-size: 50px;
-    font-size: 8vw;
-    position: absolute;
-    top: -.1rem;
-    border-top: .153em solid;
-    width: 4rem
+  content: "";
+  font-size: 50px;
+  font-size: 8vw;
+  position: absolute;
+  top: -0.1rem;
+  border-top: 0.153em solid;
+  width: 4rem;
 }
 
-@media (max-width:525px) {
-    .l-Section + .l-Section:before {
-        font-size: 42px
-    }
+@media (max-width: 525px) {
+  .l-Section + .l-Section:before {
+    font-size: 42px;
+  }
 }
 
-@media (min-width:937.5px) {
-    .l-Section + .l-Section:before {
-        font-size: 75px
-    }
+@media (min-width: 937.5px) {
+  .l-Section + .l-Section:before {
+    font-size: 75px;
+  }
 }
 
 .l-Section-title,
 .l-Section-content {
-    margin-top: 3.2rem
+  margin-top: 3.2rem;
 }
 
 .l-Section-content > :first-child,
 .l-Section-content > :first-child > h3 {
-    margin-top: 0
+  margin-top: 0;
 }
 
 .l-Section-content > p:first-child,
 .l-Section-content > ul:first-child {
-    margin-top: .3rem
+  margin-top: 0.3rem;
 }
 
 .l-Section-group {
-    display: inline
+  display: inline;
 }
 
-@media (min-width:768px) {
-    .l-Section {
-        display: flex
-    }
-
-    .l-Section:before {
-        display: none
-    }
-
-    .l-Section-title {
-        flex: 0 0 24%
-    }
+.l-Section-list {
+  margin-left: 3.2rem;
 }
 
-.l-Footer {
-    font-size: 1.4rem;
+.l-Section-item {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.l-Section-item > :first-child {
+  margin-top: 0;
+}
+
+@media (min-width: 768px) {
+  .l-Section {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 12.8rem -.8rem 3.2rem;
-    padding-top: 3.2rem
+  }
+
+  .l-Section:before {
+    display: none;
+  }
+
+  .l-Section-title {
+    flex: 0 0 24%;
+  }
 }
 
-.l-Footer a {
-    text-decoration: none;
-    display: inline-block
+.l-Flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.l-Footer a:not(:last-child) {
-    margin-right: 1.6rem
+.l-Flex dt {
+  font-weight: 900;
 }
 
-.l-Footer a:hover {
-    color: #111
-}
-
-.l-Footer-col {
-    padding-left: .8rem;
-    padding-right: .8rem
+.l-Flex dd {
+  font-size: smaller;
+  font-style: italic;
 }
 
 .Navbar {
-    color: #fff;
-    font-size: 1rem;
-    font-weight: bold;
-    line-height: 4rem;
-    letter-spacing: .28rem;
-    text-transform: uppercase;
-    width: 100%;
-    background-color: #111
+  color: #fff;
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 4rem;
+  letter-spacing: 0.28rem;
+  text-transform: uppercase;
+  width: 100%;
+  background-color: #111;
 }
 
 .Navbar a:not(.Navbar-toggle) {
-    color: inherit;
-    text-decoration: none
+  color: inherit;
+  text-decoration: none;
 }
 
 .Navbar li {
-    display: inline-block
+  display: inline-block;
 }
 
 .Navbar a {
-    display: block;
-    padding: 0 .8rem
+  display: block;
+  padding: 0 0.8rem;
 }
 
 a.Navbar-btn {
-    padding-left: 2rem;
-    padding-right: 2rem;
-    background: #256D85
+  padding-left: 2rem;
+  padding-right: 2rem;
+  background: #256d85;
 }
 
 a.Navbar-btn:hover {
-    background: #8FE3CF
+  background: #8fe3cf;
 }
 
-@media (max-width:767px) {
-    .Navbar {
-        text-align: right
-    }
+@media (max-width: 767px) {
+  .Navbar {
+    text-align: right;
+  }
 
-    .Navbar ul:not(:first-child) {
-        display: inline-block;
-        padding-right: 1.6rem !important
-    }
+  .Navbar ul:not(:first-child) {
+    display: inline-block;
+    padding-right: 1.6rem !important;
+  }
 }
 
 .Tag {
-    color: #111;
-    text-shadow: 1px 1px 0 rgba(255, 255, 255, .4);
-    font-weight: 700;
-    line-height: 1;
-    position: relative;
-    display: inline-block;
-    padding-left: .8rem;
-    padding-right: .8rem
+  color: #111;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.4);
+  font-weight: 700;
+  line-height: 1;
+  position: relative;
+  display: inline-block;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
 }
 
 .Tag:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 1.2em;
-    bottom: 0;
-    margin: auto;
-    border-radius: .2rem;
-    background-color: #8FE3CF;
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 1.2em;
+  bottom: 0;
+  margin: auto;
+  border-radius: 0.2rem;
+  background-color: #8fe3cf;
 }
 
 @media print {
-    html {
-        font-size: 50%
-    }
+  html {
+    font-size: 50%;
+  }
 
-    .l-Wrapper {
-        width: 100%;
-        max-width: none
-    }
+  .l-Wrapper {
+    width: 100%;
+    max-width: none;
+  }
 
-    .Navbar,
-    .u-hidden\@print {
-        display: none
-    }
+  .Navbar,
+  .u-hidden\@print {
+    display: none;
+  }
 
-    .l-Header,
-    .l-Header-col {
-        margin-top: 0
-    }
+  .l-Header,
+  .l-Header-col {
+    margin-top: 0;
+  }
 
-    .l-Footer,
-    .l-Section {
-        margin-top: 3.2rem
-    }
+  .l-Footer,
+  .l-Section {
+    margin-top: 3.2rem;
+  }
 
-    h3,
-    .h3,
-    .l-Section-title,
-    .l-Section-content {
-        margin-top: 1.8rem
-    }
+  h3,
+  .h3,
+  .l-Section-title,
+  .l-Section-content {
+    margin-top: 1.8rem;
+  }
 
-    .Title {
-        font-size: 5.5rem
-    }
+  .Title {
+    font-size: 5.5rem;
+  }
 
-    .l-Header {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end
-    }
+  .l-Header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
 
-    .l-Header-col:last-child:not(:first-child) {
-        text-align: right
-    }
+  .l-Header-col:last-child:not(:first-child) {
+    text-align: right;
+  }
 
-    .l-Section {
-        position: relative;
-        padding-top: 5px;
-        border-top: 1px solid #ddd
-    }
+  .l-Section {
+    position: relative;
+    padding-top: 5px;
+    border-top: 1px solid #ddd;
+  }
 
-    .l-Section:before {
-        display: none
-    }
+  .l-Section:before {
+    display: none;
+  }
 
-    .l-Section:after {
-        content: "";
-        position: absolute;
-        top: -1px;
-        left: 0;
-        border-top: 5px solid;
-        width: 4rem
-    }
+  .l-Section:after {
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: 0;
+    border-top: 5px solid;
+    width: 4rem;
+  }
 
-    .l-Section-group {
-        display: block;
-        page-break-inside: avoid
-    }
+  .l-Section-group {
+    display: block;
+    page-break-inside: avoid;
+  }
 
-    .Tag {
-        font-weight: 900;
-        display: inline;
-        padding-left: 0;
-        padding-right: 0
-    }
+  .Tag {
+    font-weight: 900;
+    display: inline;
+    padding-left: 0;
+    padding-right: 0;
+  }
 
-    *,
-    *:before,
-    *:after,
-    p:first-letter,
-    div:first-letter,
-    blockquote:first-letter,
-    li:first-letter,
-    p:first-line,
-    div:first-line,
-    blockquote:first-line,
-    li:first-line {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important
-    }
+  *,
+  *:before,
+  *:after,
+  p:first-letter,
+  div:first-letter,
+  blockquote:first-letter,
+  li:first-letter,
+  p:first-line,
+  div:first-line,
+  blockquote:first-line,
+  li:first-line {
+    background: transparent !important;
+    color: #000 !important;
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
 
-    a,
-    a:visited {
-        text-decoration: underline
-    }
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
 
-    p,
-    h2,
-    h3,
-    li {
-        orphans: 3;
-        widows: 3
-    }
+  p,
+  h2,
+  h3,
+  li {
+    orphans: 3;
+    widows: 3;
+  }
 
-    h2,
-    h3 {
-        page-break-after: avoid
-    }
-
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
 }
 
 @page {
-    margin: 2.2cm 2.2cm 1.8cm
+  margin: 2.2cm 2.2cm 1.8cm;
 }
